[Mac] RTL-support for resizable extension bubbles

Bug: 748579, 748578
Change-Id: Iec3f43459d7a62e1be19cb44b828594eedb8866a
Reviewed-on: https://chromium-review.googlesource.com/638133
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497763}